...
        {/* Group Info Section */}
        <View
          style={{
            ...styles.section,
            ...(!isShowingButtons() && {paddingBottom: 0}),
          }}
          testID="group-info-section">
          <View style={styles.sectionHeader}>
            <Text style={styles.sectionTitle}>Group Information</Text>
          </View>

          <View style={styles.groupInfoContainer}>
            <Text style={styles.meetingTimeText}>
...
              )}
          </TouchableOpacity>

          <TouchableOpacity
            style={styles.navTile}
            onPress={navigateToGroupSchedule}
            testID="group-overview-schedule-tile">
            <View style={styles.navTileIcon}>
              <Text style={styles.navTileIconText}>📅</Text>
            </View>
            <Text style={styles.navTileText}>Meetings</Text>
          </TouchableOpacity>

...
