...
      "single": "Single",
      "married": "Married",
      "separated": "Separated",
      "house": "House",
      "firstName": "First Name",
      "lastName": "Last Name",
      "email": "Email",
      "sobrietyDate": "Sobriety Date",
      "drugOfChoice": "Drug of Choice",
      "dailyHabit": "Daily Habit",
      "rentOwed": "Rent Owed",
      "choreFees": "Chore Fees",
      "emailAddress": "E-mail Address",
...
      "house.code.explanation": "This is a 10-digit code given to you by the house manager.",
      "verification.pending": "VERIFICATION PENDING",
      "inform.house.manager": "Please inform the house manager that you have completed the sign-up process.",
      "join": "Join",
      "create.new.account": "Create New Account",
      "reenter.code": "Re-Enter Code",
      "get.started": "Let's Get Started",
      "terms.of.service": "I agree to the Regroup Terms of Service.\nPlease also read the Privacy Policy.",
      "keep.updated": "Keep me updated about Regroup services, news, and promotions.",
      "next": "Next",
      "house.chat": "House Chat",
      "send": "Send",
      "password": "Password",
...
