...
        containerStyle={{ margin: normalize(10) }}
        title="SIGN IN"
        onPress={handleSubmit as any}
        disabled={isSubmitting}
      />
      <TouchableOpacity
        testID="signup-link"
        style={{ alignSelf: 'center', paddingVertical: normalize(10) }}
        onPress={() => props.navigation.navigate(Routes.Signup, {})}>
        <RatsText
          style={{
            fontFamily: fontFamily.roboto,
            fontSize: fontSize.regular_medium,
...
