...

  if (loggingIn) {
    return <RatsLoadingIndicator />;
  }

  return (
    <SafeAreaView style={{ flex: 1 }} testID="login-screen">
      <RatsScrollView
        keyboardShouldPersistTaps="handled"
        resetScrollToCoords={{ x: 0, y: 0 }}
        scrollEnabled
        extraScrollHeight={normalize(75)}
        contentContainerStyle={styles.container}
...
