...
      <View style={{ flex: 1, justifyContent: "center", alignItems: "center" }}>
        <ActivityIndicator size="large" color={color.baby_blue} />
      </View>
    );
  }
  return (
    <SafeAreaView style={{ flex: 1 }} testID="signup-screen">
      {signUpRole !== "superAdmin" && (
        <RatsScrollView
          keyboardShouldPersistTaps="handled"
          contentContainerStyle={{ flexGrow: 1 }}
        >
          {renderHeaderContent()}
...
